portfolio: added linkedin url

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <a class="header-logo" href="/">rrm003</a>
                 <a class="social-icon" href="https://github.com/rrm003"><img src="./app/resources/github.svg"
                         alt="github" width="24" height="24"></a>
-                <a class="social-icon" href=""><img src="./app/resources/linkedin.svg" alt="linkedin" width="24"
-                        height="24"></a>
+                <a class="social-icon" href="https://www.linkedin.com/in/ram-mankar"><img
+                        src="./app/resources/linkedin.svg" alt="linkedin" width="24" height="24"></a>
                 <a class="social-icon" href=""><img src="./app/resources/resume.svg" alt="resume" width="24"
                         height="24"></a>
             </nav>
