portfolio: added resume file

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                         alt="github" width="24" height="24"></a>
                 <a class="social-icon" href="https://www.linkedin.com/in/ram-mankar"><img
                         src="./app/resources/linkedin.svg" alt="linkedin" width="24" height="24"></a>
-                <a class="social-icon" href=""><img src="./app/resources/resume.svg" alt="resume" width="24"
-                        height="24"></a>
+                <a class="social-icon" href="./app/resources/Resume_Ram_Mankar.pdf"><img
+                        src="./app/resources/resume.svg" alt="resume" width="24" height="24"></a>
             </nav>
         </div>
     </header>
