portfolio: added footer section

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                         possible.
                     </p>
                 </div>
-                <form action="mailto:someone@example.com" method="post" enctype="text/plain" class="contact-form">
+                <form action="mailto:rammankar003@outlook.com" method="post" enctype="text/plain" class="contact-form">
                     <div class="contact-control">
                         <label for="name" class="visually-hidden">Name</label>
                         <input type="text" id="name" name="name" placeholder="Name" required />
@@ -201,7 +201,14 @@
     </main>
 
     <footer class="footer">
-
+        <div class="wrapper footer-wrapper">
+            <a class="social-icon" href="https://github.com/rrm003"><img src="./app/resources/github.svg" alt="github"
+                    width="24" height="24"></a>
+            <a class="social-icon" href="https://www.linkedin.com/in/ram-mankar"><img src="./app/resources/linkedin.svg"
+                    alt="linkedin" width="24" height="24"></a>
+            <a class="social-icon" href="./app/resources/Resume_Ram_Mankar.pdf"><img src="./app/resources/resume.svg"
+                    alt="resume" width="24" height="24"></a>
+        </div>
     </footer>
 
 </body>
