portfolio: updated contact me ref

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             Based in the India, I'm a software developer passionate about building web apps that helps
                             businesses grow.
                         </p>
-                        <a class="hero-contact" href="hero-contact">Contact me</a>
+                        <a class="hero-contact" href="#contact">Contact me</a>
                     </div>
                 </div>
             </div>
