--- a/index.html
+++ b/index.html
@@ -50,48 +50,49 @@
         </section>
 
         <section class="skills">
+            <div class="wrapper skills-title">I can help you with ...</div>
             <div class="wrapper skills-wrapper">
                 <div class="skills-item">
-                    <h3 class="skills-title">HTML</h3>
+                    <h3 class="skill">HTML</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">CSS</h3>
+                    <h3 class="skill">CSS</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">JAVASCRIPT</h3>
+                    <h3 class="skill">JAVASCRIPT</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">GOLANG</h3>
+                    <h3 class="skill">GOLANG</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">PostgreSQL</h3>
+                    <h3 class="skill">PostgreSQL</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">Redis</h3>
+                    <h3 class="skill">Redis</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">Docker</h3>
+                    <h3 class="skill">Docker</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">KAFKA</h3>
+                    <h3 class="skill">KAFKA</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
                 <div class="skills-item">
-                    <h3 class="skills-title">AWS Services</h3>
+                    <h3 class="skill">AWS Services</h3>
                     <p class="skills-description">3 years of experience</p>
                 </div>
             </div>
         </section>
 
         <section class="portfolio">
-            <!-- <div class="wrapper portfolio-title">Sample Projects</div> -->
+            <div class="wrapper portfolio-title">My Work ...</div>
             <div class="wrapper portfolio-wrapper">
                 <div class="portfolio-items">
                     <img class="project-image" src="./app/resources/sample-project.png" alt="sample-project">
